# nps-proof-pipeline

./: .gitignore  README.md  pyproject.toml
cascade_taskpack_structural_differentiation_v4.4/: CASCADE_MASTER_INSTRUCTIONS.md  README.md
docs/: CASCADE_PHASEA_STEP_A0_VALIDATION_LAYER.md  CASCADE_PHASEA_STEP_A2_NOTATION_FREEZE.md  CASCADE_PHASEA_STEP_A4_EXTRACT_CAS_A_ASSUMPTIONS.md  CASCADE_PHASEA_STEP_A6_CLOSURE_AND_MINIMALITY.md  CASCADE_PHASEA_STEP_A8_NONNEGATIVE_DOMAIN_POLICY.md
guide-plan-and-persona/: Computational_Certification_Architect_Role_Prompt.md  phase_group_c_usage_guide.md  structural_differentiation_programme_v4_4.md
tests/: __init__.py  test_b_prime_upstream_blocking.py  test_cas0a_freeze.py  test_cas0a_minimality_phase0a.py  test_cas0a_property_catalog.py  test_cas_artefact_gate.py  test_cert_artifacts_convention.py  test_cert_dependency_gate.py  test_dependency_registry.py  test_drop_test_phaseA.py  test_gates_on_phase_group_a.py  test_gates_on_phase_group_b.py  test_gates_on_with_toy.py  test_import_firewall.py  test_interior_stationary_solver.py  test_jacobian_conditioning_checker.py  test_multistart_candidate_selection.py  test_phase_0a_cas0a_generation.py  test_phase_0b_cas0b_generation.py  test_phase_a_casa_generation.py  test_phase_a_prime_closure.py  test_phase_a_real_phi_certified_objective.py  test_phase_a_with_toy_checks.py  test_phase_b_operator_checks_toy.py  test_phase_b_real_phi_regime_fields.py  test_phase_c_entry_gate.py  test_phase_group_b_end_to_end.py  test_quadratic_toy_derivatives.py  test_quadratic_toy_locality.py  (+7 more)
(+394 files in other folders)
