[project]
name = "nps-proof-pipeline"
version = "0.1.0"
description = "Formal certification pipeline for the Network Potential Structural Differentiation Programme"
requires-python = ">=3.11"

dependencies = [
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.mypy]
strict = true
python_version = "3.11"
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true